# kindle-export-parser

./: Pipfile  README.md  pyproject.toml  pythonista_kindle_to_bear.py
kindle_export_parser/: cli.py  converter.py  md_renderer.py  notebook.py  parser.py
tests/: test_kindle_note.py  test_kindle_note_parser.py  test_md_renderer.py
tests/files/: sample-export-simple.html
