[tool.poetry]
name = "kindle-export-parser"
version = "0.1.0"
description = ""
authors = ["Benjamin Bauer <benjaminf.bauer@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
jinja2 = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
