[tool.poetry]
name = "kindle-export-parser"
version = "0.1.0"
description = ""
authors = ["Benjamin Bauer <benjaminf.bauer@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
jinja2 = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
pytest = "*"
pytest-mock = "*"

[tool.poetry.scripts]
kindle-export-parser = "kindle_export_parser.cli:convert"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
